[tool.poetry]
name = "asgi-sage"
version = "0.1.0a"
description = "Security Headers for asgi apps"
authors = ["Jt Miclat <jtmiclat@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
starlette = "^0.13.4"
requests = "^2.23.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
