[tool.poetry]
name = "asgi-sage"
version = "0.1.1"
description = "Security Headers for asgi apps"
authors = ["Jt Miclat <jtmiclat@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jtmiclat/asgi-sage"
repository = "https://github.com/jtmiclat/asgi-sage" 

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
starlette = "^0.13.4"
requests = "^2.23.0"
mypy = "^0.770"
pytest-cov = "^2.9.0"
black = "^19.10b0"
flake8 = "^3.8.2"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
